Ghibli-Food-DevOps/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghibli-food
  labels:
    name: ghibli-food
    app.kubernetes.io/name: ghibli-food
    app.kubernetes.io/instance: production
    app.kubernetes.io/version: "1.0.0"
